add basic actions

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -158,6 +158,14 @@
    </property>
   </action>
  </widget>
+ <tabstops>
+  <tabstop>listView</tabstop>
+  <tabstop>pushButton_2</tabstop>
+  <tabstop>pushButton_3</tabstop>
+  <tabstop>lineEdit</tabstop>
+  <tabstop>pushButton</tabstop>
+  <tabstop>pushButton_4</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
