add quit action

--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -142,6 +142,8 @@
     <addaction name="actionSave_as"/>
     <addaction name="separator"/>
     <addaction name="actionExport"/>
+    <addaction name="separator"/>
+    <addaction name="actionQuit"/>
    </widget>
    <addaction name="menucoucou"/>
   </widget>
@@ -184,6 +186,14 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+E</string>
+   </property>
+  </action>
+  <action name="actionQuit">
+   <property name="text">
+    <string>Quit</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Q</string>
    </property>
   </action>
  </widget>
