--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -78,6 +78,13 @@
          </widget>
         </item>
         <item>
+         <widget class="QPushButton" name="pushButton_remove_sentence">
+          <property name="text">
+           <string>Remove</string>
+          </property>
+         </widget>
+        </item>
+        <item>
          <spacer name="horizontalSpacer">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
@@ -163,7 +170,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>32</height>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="menucoucou">
