--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -149,6 +149,13 @@
         </property>
        </spacer>
       </item>
+      <item>
+       <widget class="QCheckBox" name="preview_checkBox">
+        <property name="text">
+         <string>Real-time preview</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </item>
    </layout>
@@ -159,7 +166,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>32</height>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="menucoucou">
