--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -179,6 +179,7 @@
     <addaction name="actionSave_as"/>
     <addaction name="separator"/>
     <addaction name="actionExport"/>
+    <addaction name="actionExport_selection"/>
     <addaction name="separator"/>
     <addaction name="actionQuit"/>
    </widget>
@@ -280,6 +281,14 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+V</string>
+   </property>
+  </action>
+  <action name="actionExport_selection">
+   <property name="text">
+    <string>E&amp;xport selection</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Shift+E</string>
    </property>
   </action>
  </widget>
