--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -79,6 +79,9 @@
         </item>
         <item>
          <widget class="QPushButton" name="pushButton_remove_sentence">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <property name="text">
            <string>Remove</string>
           </property>
@@ -134,7 +137,11 @@
        </spacer>
       </item>
       <item>
-       <widget class="QSpinBox" name="spinBox_index"/>
+       <widget class="QSpinBox" name="spinBox_index">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+       </widget>
       </item>
       <item>
        <spacer name="horizontalSpacer_2">
