--- a/ui/new.ui
+++ b/ui/new.ui
@@ -48,7 +48,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton">
+      <widget class="QPushButton" name="remove_button">
        <property name="text">
         <string>Remove URL</string>
        </property>
